--- a/sass/components/_signup.scss
+++ b/sass/components/_signup.scss
@@ -13,4 +13,17 @@
     color: #1d1d1d;
     margin-bottom: 2rem;
   }
+
+  &__create-section {
+
+  }
+
+  &__create-wrapper {
+
+  }
+
+  &__create-link {
+    font-weight: 700;
+
+  }
 }
