--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,12 @@
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit; }
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 62.5%; }
 
 /* Remove default padding */
@@ -76,11 +78,13 @@ select {
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
+    -webkit-animation-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+            animation-iteration-count: 1 !important;
+    -webkit-transition-duration: 0.01ms !important;
+            transition-duration: 0.01ms !important;
     scroll-behavior: auto !important; } }
-
 a {
   text-decoration: none; }
 
@@ -100,14 +104,22 @@ a {
     line-height: 1;
     color: red; }
   .login__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-content: center; }
+    -ms-flex-line-pack: center;
+        align-content: center; }
     .login__form *:not(:last-child) {
       margin-right: 1rem; }
   .login__pword-container {
     margin-top: 2px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
     .login__pword-container span a {
       padding-top: 5px;
       font-size: 1.20rem;
@@ -115,7 +127,8 @@ a {
   .login__label {
     font-size: 1.20rem; }
   .login__btn-wrapper {
-    align-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
     margin-left: -1rem; }
   .login__input {
     width: 173px;
@@ -136,6 +149,7 @@ a {
     border: 1px solid #08298A;
     outline: none;
     cursor: pointer;
+    -webkit-transition: all .2s;
     transition: all .2s; }
     .login__btn:hover {
       background-color: #0958a2; }
@@ -166,22 +180,19 @@ a {
 .hero__heading-wrapper {
   margin-top: 8rem;
   margin-bottom: 3.5rem; }
-
 .hero__heading--main {
   font-size: 3rem;
   font-weight: 600;
   line-height: 1.25;
   color: #1d1d1d; }
-
 .hero__features-list > *:not(:last-child) {
   margin-bottom: 1.5rem; }
-
 .hero__features-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
-
 .hero__features-icon {
   margin-right: 1rem; }
-
 .hero__heading-sub {
   color: #1d1d1d; }
   .hero__heading-sub span {
@@ -194,23 +205,27 @@ a {
   color: #1d1d1d;
   line-height: 1;
   margin-top: 2.5rem; }
-
 .signup__heading-sub {
   font-size: 1.5rem;
   color: #1d1d1d;
   margin-bottom: 2rem; }
-
-.signup__create-link {
+.signup__create-section {
+  margin-top: 1.5rem;
+  margin-bottom: 2rem; }
+.signup__create-wrapper {
+  font-size: 1.5rem;
   font-weight: 700; }
+.signup__create-link {
+  font-size: inherit;
+  font-weight: inherit;
+  color: #4c66a4; }
 
 /* FORMS
 ========================*/
 .form > * {
   margin-bottom: 2rem; }
-
 .form__input-container > *:not(:last-child) {
   margin-bottom: 1rem; }
-
 .form__text-input {
   width: 460px;
   height: 40px;
@@ -220,7 +235,8 @@ a {
   border: 1px solid #BDBDBD;
   outline: none;
   color: #999999; }
-
+  .form__text-input::-webkit-input-placeholder {
+    color: #999999; }
 .form__text-input2 {
   width: 225px;
   height: 40px;
@@ -230,39 +246,58 @@ a {
   border: 1px solid #BDBDBD;
   outline: none;
   color: #999999; }
+  .form__text-input2::-webkit-input-placeholder {
+    color: #999999; }
   .form__text-input2:not(:last-of-type) {
     margin-right: .5rem; }
-
 .form__select-container {
-  display: flex; }
-  .form__select-container p {
-    line-height: 1; }
-
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .form__select-container a {
+    color: #4c66a4;
+    font-size: 1.15rem;
+    line-height: 1.25; }
+.form__bday-label {
+  font-weight: 500;
+  font-size: 2rem; }
 .form__select-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-items: auto; }
-
 .form__select-item {
   height: 30px;
   border: silver 1px solid;
   border-bottom: silver 1px solid;
   width: 75px;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   color: #999999;
   background-color: white; }
-
 .form__why {
   margin-left: 1rem; }
-
-.form__rradio-wrapper {
+.form__radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+.form__radio-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center; }
-  .form__rradio-wrapper > *:not(:last-child) {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 2rem; }
+  .form__radio-wrapper label {
+    font-weight: 500;
+    font-size: 2rem; }
+  .form__radio-wrapper > *:not(:last-child) {
     margin-right: .5rem; }
-
 .form__terms {
   line-height: 1.5; }
-
 .form__btn {
   width: 205px;
   height: 45px;
@@ -272,9 +307,11 @@ a {
   margin-bottom: 10px;
   font-family: 'Freight Sans Bold', helvetica, arial, sans-serif  !important;
   font-weight: bold !important;
+  background: -webkit-gradient(linear, left top, left bottom, from(#67ae55), to(#578843));
   background: linear-gradient(#67ae55, #578843);
   background-color: #69a74e;
-  box-shadow: inset 0 1px 1px #a4e388;
+  -webkit-box-shadow: inset 0 1px 1px #a4e388;
+          box-shadow: inset 0 1px 1px #a4e388;
   border-color: #3b6e22 #3b6e22 #2c5115;
   border: 1px solid;
   border-radius: 5px;
@@ -286,6 +323,8 @@ a {
   outline: none; }
 
 .form__rradio {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
   .form__rradio > *:not(:last-child) {
     margin-right: .75rem; }
@@ -314,16 +353,23 @@ a {
     max-width: 130rem;
     margin: 0 auto;
     padding: 0 .5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center; }
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
     .header__container a {
       text-decoration: none;
       display: block;
       width: 100%;
       height: 100%;
       margin-right: auto;
-      box-sizing: content-box; }
+      -webkit-box-sizing: content-box;
+              box-sizing: content-box; }
 
 /* CONTENT
 ========================*/
@@ -331,15 +377,21 @@ a {
   font-size: 1.4rem;
   max-width: 130rem;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 50rem; }
 
 /* COL-LEFT
 ========================*/
 .hero {
-  flex: 0 0 56.25%; }
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 56.25%;
+          flex: 0 0 56.25%; }
 
 /* COL-RIGHT
 ========================*/
 .signup {
-  flex: 1; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
