--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -26,6 +26,10 @@
     border:1px solid #BDBDBD;
     outline: none;
     color: $color-grey-light-2;
+
+    &::-webkit-input-placeholder {
+      color: $color-grey-light-2;
+    }
   }
   &__text-input2 {
     width:225px;
@@ -37,6 +41,10 @@
     outline: none;
     color: $color-grey-light-2;
 
+    &::-webkit-input-placeholder {
+      color: $color-grey-light-2;
+    }
+
     &:not(:last-of-type) {
       margin-right: .5rem;
     }
@@ -46,15 +54,20 @@
 
   &__select-container {
     display: flex;
-    & p {
-      line-height: 1;
+    align-items: center;
+    & a {
+      color: $color-primary-blue;
+      font-size: 1.15rem;
+      line-height: 1.25;
     }
   }
 
 
-  &__bday {
-
+  &__bday-label {
+    font-weight: 500;
+    font-size: 2rem;
   }
+
   &__select-list {
     display: flex;
     justify-items: auto;
@@ -65,7 +78,7 @@
     border: silver 1px solid;
     border-bottom: silver 1px solid;
     width: 75px;
-    font-size: 1.75rem;
+    font-size: 1.25rem;
     color: $color-grey-light-2;
     background-color: white;
   }
@@ -74,10 +87,20 @@
     margin-left: 1rem;
   }
 
+  &__radio {
+    display: flex;
+  }
+
   
-  &__rradio-wrapper {
+  &__radio-wrapper {
     display: flex;
     align-items: center;
+    margin-right: 2rem;
+
+    & label {
+      font-weight: 500;
+      font-size: 2rem;
+    }
 
     & > *:not(:last-child) {
       margin-right: .5rem;
