--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,7 +49,7 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
   color: $color-grey-dark-1;
