--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,12 @@ select {
 a {
   text-decoration: none; }
 
+.success {
+  color: #4BB543; }
+
+.error {
+  color: #d9534f; }
+
 /* LOGO
 ========================*/
 .logo {
@@ -170,10 +176,6 @@ a {
     color: #c0c0c0;
     border: none;
     cursor: auto; }
-  .login .success {
-    color: #4BB543; }
-  .login .error {
-    color: #d9534f; }
 
 /* HERO
 ========================*/
