--- a/sass/layout/_col-left.scss
+++ b/sass/layout/_col-left.scss
@@ -3,4 +3,9 @@
 
 .hero{
   flex: 0 0 56.25%;
+
+  @media only screen and (max-width: $bp-small) {
+    display: none;
+    visibility: hidden;
+  }
 }
