--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,9 +15,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;  // 1rem = 10px, 10px/16px =62.5%;
-  // @media only screen and (max-width: $bp-large) {
-  //   font-size: 50%;
-  // }
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 55%;
+  }
+  
 }
 
 /* Remove default padding */
@@ -104,3 +105,6 @@ a {
   text-decoration: none;
 }
 
+label {
+  color: white;
+}
