--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -2,6 +2,9 @@
 ========================*/
 
 .form {
+  @media only screen and (max-width: $bp-small) {
+    padding-left: 1.5rem;
+  }
 
   & > * {
     margin-bottom: 2rem;
@@ -13,12 +16,10 @@
     }
   }
 
-  &__input-wrapper {
-
-  }
 
   &__text-input {
-    width:460px;
+    max-width:460px;
+    width: 100%;
     height:40px;
     border-radius:5px;
     padding-left:10px;
@@ -32,7 +33,8 @@
     }
   }
   &__text-input2 {
-    width:225px;
+    max-width:226px;
+    width: 100%;
     height:40px;
     border-radius:5px;
     padding-left:10px;
@@ -120,10 +122,6 @@
     }
   }
 
-  &__btn-wrapper {
-
-  }
-
   &__btn {
     width:205px;
     height:45px;
@@ -147,12 +145,8 @@
     outline: none;
   }
 
-}
-
-.form__rradio {
-  display: flex;
-
-  & > *:not(:last-child) {
-    margin-right: .75rem;
+  & label {
+    color: $color-grey-dark-2;
   }
+
 }
