--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,21 +2,23 @@
 ========================*/
 .header {
   background-color: $color-primary-blue;
-  // height:95px;
-  width: 100%;
-  color: white;
 
   &__container {
     font-size: 1.4rem;
     max-width: 130rem;
+    width: 100%;
     margin: 0 auto;
     padding: 0 .5rem;
-    // height: 45px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // align-content: center;
-    // height: 100%;
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-bottom: 1rem;
+    }
 
     & a {
       text-decoration: none;
@@ -25,12 +27,13 @@
       height: 100%;
       margin-right: auto;
       box-sizing: content-box;
+      @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        width: auto;
+      }
     }
-
-    // @media only screen and (max-width: $bp-medium) {
-    //   flex-wrap: wrap;
-    //   padding: 0;
-    // }
+    
+    
   }
   
 }
