--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -16,12 +16,14 @@
   }
 
   &__form {
+    flex: 0 0 80%;
     display: flex;
     align-content: center;
 
-    *:not(:last-child) {
+    & > *:not(:last-child) {
       margin-right: 1rem;
     }
+
   }
 
   &__uname-container {
