--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -2,8 +2,14 @@
 ========================*/
 
 .form {
+  max-width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   @media only screen and (max-width: $bp-small) {
-    padding-left: 1.5rem;
+    max-width: 100%;
+    padding: 0 1rem;
   }
 
   & > * {
@@ -11,15 +17,26 @@
   }
 
   &__input-container {
+    display: flex;
+    flex-direction: column;
+
     & > *:not(:last-child) {
       margin-bottom: 1rem;
     }
   }
 
+  &__input {
+    display: flex;
+
+    @media only screen and (max-width: $bp-large) {
+      flex-wrap: wrap;
+      margin: 0;
+    }
+  }
+
 
   &__text-input {
-    max-width:460px;
-    width: 100%;
+    flex: 1;
     height:40px;
     border-radius:5px;
     padding-left:10px;
@@ -31,27 +48,42 @@
     &::-webkit-input-placeholder {
       color: $color-grey-light-2;
     }
+    
   }
   &__text-input2 {
-    max-width:226px;
-    width: 100%;
+    flex: 1;
     height:40px;
     border-radius:5px;
-    padding-left:10px;
+    text-indent: 1rem;
     font-size:18px;
     border:1px solid #BDBDBD;
     outline: none;
     color: $color-grey-light-2;
 
+    &:not(:last-of-type) {
+      margin-right: 1rem;
+
+      @media only screen and (max-width: $bp-large) {
+        margin-right: 0;
+        margin-bottom: 1rem;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-right: 1rem;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        margin-right: 0;
+      }
+    }
+
     &::-webkit-input-placeholder {
       color: $color-grey-light-2;
     }
 
-    &:not(:last-of-type) {
-      margin-right: .5rem;
-    }
   }
   &__select {
+
     &-item {
       outline: none;
     }
@@ -60,6 +92,12 @@
   &__select-container {
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-large) {
+      flex-direction: column;
+      align-items: baseline;
+    }
+
     & a {
       color: $color-primary-blue;
       font-size: 1.15rem;
