--- a/sass/components/_signup.scss
+++ b/sass/components/_signup.scss
@@ -2,11 +2,12 @@
 ========================*/
 
 .signup {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 
-  @media only screen and (max-width: $bp-small) {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+  @media only screen and (max-width: $bp-medium) {
+    align-items: center;
   }
 
   &__heading-main {
