--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -8,8 +8,9 @@
   justify-content: center;
 
   @media only screen and (max-width: $bp-small) {
-    max-width: 100%;
-    padding: 0 1rem;
+    // max-width: 100%;
+    width: 100%;
+    // margin: 0 1rem;
   }
 
   & > * {
@@ -47,6 +48,10 @@
 
     &::-webkit-input-placeholder {
       color: $color-grey-light-2;
+
+      @media only screen and (max-width: $bp-small) {
+        font-size: 1.5rem;
+      }
     }
     
   }
@@ -79,6 +84,10 @@
 
     &::-webkit-input-placeholder {
       color: $color-grey-light-2;
+
+      @media only screen and (max-width: $bp-small) {
+        font-size: 1.5rem;
+      }
     }
 
   }
